# roman-wfi-reference-pipeline

./: .coveragerc  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  =0.3.1  =2.0.4  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  __init__.py  coverage.xml  pyproject.toml  requirements.txt  romantest.yml  setup.cfg  setup.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md  feature_request.md
.github/jobs/coverage_diff/: action.yml
.github/jobs/pytest/: action.yml
.github/workflows/: ci_workflow.yml
.gitlab/: dependabot.yml
code/dark/: dark.py
code/flat/: flat.py
code/read_noise/: read_noise.py
code/resources/: crds_submission_template.yaml
code/tests/: test_crds.py
code/utilities/: basic_calibration.py  basic_mask.py  dcl.py  logging_functions.py  notifications.py  reference_file.py  submit_files.py
config/: slack_dev.yml  slack_example.yml
dev_scripts/: .nfs0000000015b7c50600000002  rfp_abvegaoffset_creation.py  rfp_apcorr_creation.py  rfp_dark_decay_signal_creation.py  rfp_dark_dev.py  rfp_darkdecay_dev.py  rfp_etc_creation.py  rfp_flat_dev.py  rfp_gain_dev.py  rfp_ipc_dev.py  rfp_ipc_generate_dev.py  rfp_mask_dev.py  rfp_matable_dev.py  rfp_readnoise_dev.py  rfp_readnoise_dev_tvac_rgc.py  rfp_referencepixel_dev.py  rfp_saturation_dev.py  rfp_submit_files_to_crds_dev.py  rfp_superdark_batches_dev.py  rfp_superdark_dev.py
dev_scripts/rfp_fgs_mask/: README.md  full_workflow_cleaned.py
doc/: index.rst
doc/source/: conf.py  index.rst
doc/source/utilities/: index.rst
examples/: create_abvegaoffset_example.ipynb  create_aperturecorrection_example.ipynb  create_dark_example.ipynb  create_dark_example_rgc.ipynb  create_flat_example.ipynb  create_ipc_ref_files_example.py  create_mask_example.ipynb  create_readnoise_example.ipynb  create_referencepixel_example.ipynb  dark_pipeline_run.py  distortion_from_stars_test.ipynb  pipeline_run.py  readnoise_pipeline_run.py  refpix_pipeline_run.py  test.py  update_tvac_crds_files_build17.py
src/: config.yml
src/docs/: conf.py  how_to_make_new_parsfiles.md  how_to_make_new_parsfiles.txt  how_to_make_new_reftype.txt  index.rst  modules.rst  new_reftype_class_basic_tests_example.md  new_reftype_class_example.md  new_reftype_meta_example_workflow.md  src.rst  src.wfi_reference_pipeline.config.rst  src.wfi_reference_pipeline.dark.rst  src.wfi_reference_pipeline.distortion.rst  src.wfi_reference_pipeline.flat.rst  src.wfi_reference_pipeline.gain.rst  src.wfi_reference_pipeline.linearity.rst  src.wfi_reference_pipeline.read_noise.rst  src.wfi_reference_pipeline.resources.data.rst  src.wfi_reference_pipeline.resources.rst  src.wfi_reference_pipeline.rst  src.wfi_reference_pipeline.saturation.rst  src.wfi_reference_pipeline.tests.rst  src.wfi_reference_pipeline.utilities.rst  wfi_reference_pipeline.config.rst  wfi_reference_pipeline.pipelines.rst  wfi_reference_pipeline.reference_types.dark.rst  wfi_reference_pipeline.reference_types.distortion.rst  wfi_reference_pipeline.reference_types.flat.rst  wfi_reference_pipeline.reference_types.gain.rst  wfi_reference_pipeline.reference_types.interpixelcapacitance.rst  wfi_reference_pipeline.reference_types.inverselinearity.rst  wfi_reference_pipeline.reference_types.linearity.rst  wfi_reference_pipeline.reference_types.mask.rst  wfi_reference_pipeline.reference_types.readnoise.rst  wfi_reference_pipeline.reference_types.referencepixel.rst  wfi_reference_pipeline.reference_types.rst  wfi_reference_pipeline.reference_types.saturation.rst  wfi_reference_pipeline.resources.data.rst  wfi_reference_pipeline.resources.rst  wfi_reference_pipeline.rst  (+2 more)
src/wfi_reference_pipeline/: __init__.py  constants.py  pipeline.py  reference_type.py  rfp_main.py
src/wfi_reference_pipeline/config/: config.yml  config_access.py  crds_submission_config.yml  dark_decay_config.yml  example_config.yml  exposure_time_calculator_config.yml  pipelines_config.yml  quality_control_config.yml  quality_control_config_WFI01.yml  quality_control_config_WFI03.yml  quality_control_config_WFI06.yml  quality_control_config_WFI08.yml  quality_control_config_WFI09.yml  rfp_ma_table_config.yml  rfp_ma_tables.txt
src/wfi_reference_pipeline/dark/: dark.py
src/wfi_reference_pipeline/database/: db_entry.py
src/wfi_reference_pipeline/distortion/: distortion.py
src/wfi_reference_pipeline/flat/: flat.py
src/wfi_reference_pipeline/gain/: gain.py
src/wfi_reference_pipeline/interpixelcapacitance/: interpixelcapacitance.py
src/wfi_reference_pipeline/inv_linearity/: inv_linearity.py
src/wfi_reference_pipeline/inverselinearity/: inverselinearity.py
src/wfi_reference_pipeline/linearity/: linearity.py
src/wfi_reference_pipeline/mask/: mask.py
src/wfi_reference_pipeline/pipeline/: pipeline.py
src/wfi_reference_pipeline/pipelines/: dark_pipeline.py  fgs_mask_pipeline.py  flat_pipeline.py  mask_pipeline.py  pipeline.py  readnoise_pipeline.py  refpix_pipeline.py
src/wfi_reference_pipeline/read_noise/: read_noise.py
src/wfi_reference_pipeline/readnoise/: readnoise.py
src/wfi_reference_pipeline/reference_types/: data_cube.py  data_cube_model.py  reference_type.py
src/wfi_reference_pipeline/referencepixel/: irrc_constants.py  irrc_extract_ramp_sums.py  irrc_generate_weights.py  irrc_polynomial.py  irrc_util.py  referencepixel.py
src/wfi_reference_pipeline/resources/: make_dev_meta.py  (+27 more)
utilities/: logging_functions.py  notifications.py  reference_file.py  submit_files.py
wfi_reference_pipeline/dark/: dark.py
wfi_reference_pipeline/distortion/: distortion.py
wfi_reference_pipeline/flat/: flat.py
wfi_reference_pipeline/gain/: gain.py
wfi_reference_pipeline/linearity/: linearity.py
wfi_reference_pipeline/pipeline/: pipeline.py
wfi_reference_pipeline/read_noise/: read_noise.py
wfi_reference_pipeline/saturation/: saturation.py
wfi_reference_pipeline/tests/: test_linearity.py
wfi_reference_pipeline/utilities/: basic_mask.py  make_maskfile.py  manifest.py  mask.py  match_refcat.py  notifications.py  reference_catalog.py  reference_file.py  simulate_reads.py  submit_files.py
(+121 files in other folders)
