[project]
name = "wfi_reference_pipeline"
description = "Reference file pipeline for the Roman WFI instrument."
requires-python = ">=3.12"
authors = [
    { name = "STScI", email = "help@stsci.edu" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "astropy>=5.3.1",
    "crds>=11.17.2",
    "h5py",
    "matplotlib>=3.7.2",
    "numpy>=1.25.2",
    "pandas>=2.1.2",
    "photutils>=1.8.0",
    "pytest-cov",
    "pytest",
    "pysiaf>=0.20.0",
    "PyYAML>=6.0.1",
    "rad>=0.23.0",
    "requests>=2.31.0",
    "romancal>=0.17.0",
    "roman-datamodels>=0.23.0",
    "scipy>=1.11.3",
    "soc_roman_tools>=0.1.0",
    "webbpsf>=1.3.0", # for aperture correction reference file
]
dynamic = [
    "version",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "stsci_rtd_theme",
    "sphinx_automodapi",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
"Source Code" = "https://grit.stsci.edu/roman/wfi_reference_pipeline"

[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm[toml]>=3.4",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
exclude = [
    "doc",
    "examples",
]
where = [
    "src",
]
namespaces = false

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"wfi_reference_pipeline.resources" = [
    "data/*.yaml",
]

[tool.setuptools_scm]
write_to = "src/wfi_reference_pipeline/version.py"

[tool.ruff.lint]
select = ["E", "F", "N"]
ignore = ["E501"]

[tool.coverage.run]
source = ["wfi_reference_pipeline"]
omit = [
    "**/__init__.py",
    "**/tests/*",
    "wfi_reference_pipeline/version.py",
]
