[metadata]
name = wfi_reference_pipeline
author = Tyler Desjardins
author_email = desjard@stsci.edu
description = Reference file pipeline for the Roman WFI instrument.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://grit.stsci.edu/roman/wfi_reference_pipeline

[options]
packages = find:
zip_safe = False
python_requires = >=3.8
setup_requires =
    setuptools_scm
install_requires =
    requests
    sphinx
    sphinx_automodapi
    sphinx_rtd_theme

[options.packages.find]
exclude =
    doc
    examples

[flake8]
max-line-length = 100
ignore = E133, E226, E228, N802, N803, N806, N812, N815, N816, W504
exclude =
  **/__init__.py,
  docs,
  build
