[metadata]
name = wfi_reference_pipeline
author = STScI
author_email = help@stsci.edu
description = Reference file pipeline for the Roman WFI instrument.
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source Code = https://grit.stsci.edu/roman/wfi_reference_pipeline
license = BSD-3-Clause
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = False
python_requires = >=3.8
setup_requires =
    setuptools_scm
install_requires =
    requests
    sphinx
    sphinx_automodapi
    sphinx_rtd_theme
    soc_roman_tools

[options.packages.find]
exclude =
    doc
    examples

[flake8]
max-line-length = 88
ignore = F841, E127
