[metadata]
name = wfi_reference_pipeline
author = STScI
author_email = help@stsci.edu
description = Reference file pipeline for the Roman WFI instrument.
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source Code = https://grit.stsci.edu/roman/wfi_reference_pipeline
license = BSD-3-Clause
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
package_dir =
    =src
packages = find:
zip_safe = False
python_requires = >=3.9
setup_requires =
    setuptools_scm
install_requires =
    requests
    sphinx
    sphinx_automodapi
    sphinx_rtd_theme
    soc_roman_tools
    romancal
    pandas
    # pyodbc=4.0.35
    # sqlalchemy=2.0.4
    # freetds=1.3.16

[options.packages.find]
exclude =
    doc
    examples
where = src

[options.package_data]
wfi_reference_pipeline.resources = data/*.yaml

[flake8]
max-line-length = 90
ignore = F841, E127
